[package]
name = "small_cage"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive"] }
data-encoding = "2.9.0"
futures-lite = "2.6.1"
iroh = "0.95.1"
iroh-gossip = "0.95.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"
